; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_terrain.c_Terrain_AddTexture.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_terrain.c_Terrain_AddTexture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numtextures = common dso_local global i32 0, align 4
@textures = common dso_local global i32** null, align 8
@MAX_TERRAIN_TEXTURES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Too many textures on terrain\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Terrain_AddTexture(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %38

7:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %22, %7
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @numtextures, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %8
  %13 = load i32**, i32*** @textures, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32*, i32** %13, i64 %15
  %17 = load i32*, i32** %16, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = icmp eq i32* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %12
  br label %38

21:                                               ; preds = %12
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %8

25:                                               ; preds = %8
  %26 = load i32, i32* @numtextures, align 4
  %27 = load i32, i32* @MAX_TERRAIN_TEXTURES, align 4
  %28 = icmp sge i32 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = call i32 @Error(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %38

31:                                               ; preds = %25
  %32 = load i32*, i32** %2, align 8
  %33 = load i32**, i32*** @textures, align 8
  %34 = load i32, i32* @numtextures, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* @numtextures, align 4
  %36 = sext i32 %34 to i64
  %37 = getelementptr inbounds i32*, i32** %33, i64 %36
  store i32* %32, i32** %37, align 8
  br label %38

38:                                               ; preds = %31, %29, %20, %6
  ret void
}

declare dso_local i32 @Error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
